DOM exercises added

--- a/3. Advanced/4. DOM/2. Exercises/04. Order-the-Names/template.html
+++ b/3. Advanced/4. DOM/2. Exercises/04. Order-the-Names/template.html
@@ -18,7 +18,7 @@
                 </article>
 
                 <div>
-                    <h1>SoftUni Database</h1>
+                    <h1>Database</h1>
                     <ol type="A">
                         <li></li>
                         <li></li>
