--- a/3. Advanced/4. DOM/1. Introduction/00. Demo/DOM Traversal/index.html
+++ b/3. Advanced/4. DOM/1. Introduction/00. Demo/DOM Traversal/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <title>DOM Traversal</title>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <div class="grandparent">
-        <div class="parent">
-            <div class="child"></div>
-            <div class="child"></div>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+        <div id="grandparentID" class="grandparent">
+           
         </div>
-        <div class="parent">
-            <div class="child"></div>
-            <div class="child"></div>
-        </div>
-    </div>
-</body>
+  </body>
 </html>
+
+<div class="parent">
+  <div class="child"></div>
+  <div class="child"></div>
+</div>
+<div class="parent">
+  <div class="child"></div>
+  <div class="child"></div>
+</div>
