--- a/3. Advanced/4. DOM/1. Introduction/03. Growing Word/template.html
+++ b/3. Advanced/4. DOM/1. Introduction/03. Growing Word/template.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" href="template.css">
-    <script src="solution.js"></script>
+    <script src="solution.js" defer></script>
     <title>Growing Word</title>
 </head>
 
@@ -23,9 +23,9 @@
 
     <div id="exercise">
         <div id="colors">
-            <div id="blueDiv">Blue</div>
-            <div id="greenDiv">Green</div>
-            <div id="redDiv">Red</div>
+            <button type="button">Blue</button>
+            <button type="button">Green</button>
+            <button type="button">Red</button>
         </div>
         <div>
             <button type="button" onclick="growingWord()">CHANGE</button>
