--- a/3. Advanced/4. DOM/2. Exercises/05. Chat-Room/template.html
+++ b/3. Advanced/4. DOM/2. Exercises/05. Chat-Room/template.html
@@ -18,18 +18,18 @@
                     <div class="profile other-profile">
                         <img src="https://images.unsplash.com/photo-1537396123722-b93d0acd8848?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=efc6e85c24d3cfdd15cd36cb8a2471ed"
                             width="30" height="30" />
-                        <span>Other profile</span>
+                        <span>Stoqn Kolev</span>
                     </div>
                     <div class="message other-message">
-                        Sorry, I am busy right now, Can I write you back later?
+                        How have you been?
                     </div>
                     <div class="profile my-profile">
-                        <span>My profile</span>
+                        <span>Stan</span>
                         <img src="https://images.unsplash.com/photo-1534135954997-e58fbd6dbbfc?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=400&fit=max&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=02d536c38d9cfeb4f35f17fdfaa36619"
                             width="30" height="30" />
                     </div>
                     <div class="message my-message">
-                        Hi!
+                        Hello! Nice to hear from you.
                     </div>
                 </div>
             </div>
