--- a/3. Advanced/5. DOM Manipulations/1. Introduction/06. Highlight-Active/index.html
+++ b/3. Advanced/5. DOM Manipulations/1. Introduction/06. Highlight-Active/index.html
@@ -1,6 +1,3 @@
-<!--Problems for in-class lab for the “JavaScript Advanced” course @ SoftUni.
-Submit your solutions in the SoftUni judge system at https://judge.softuni.bg/Contests/1549/Lab-DOM-Manipulations -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -12,7 +9,7 @@ Submit your solutions in the SoftUni judge system at https://judge.softuni.bg/Co
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body onload="focus()">
+<body>
     <div>
         <div>
             <h1>Section 1</h1><input type="text" />
