DOM Manipulation Exercises added

--- a/3. Advanced/5. DOM Manipulations/2. Exercises/07. Furniture/template.html
+++ b/3. Advanced/5. DOM Manipulations/2. Exercises/07. Furniture/template.html
@@ -36,6 +36,7 @@
                                         </td>
                                         <td>
                                             <p>Office chair</p>
+                                        </td>
                                         <td>
                                             <p>160</p>
                                         </td>
@@ -43,7 +44,7 @@
                                             <p>0.5</p>
                                         </td>
                                         <td>
-                                            <input type="checkbox" disabled />
+                                            <input type="checkbox" />
                                         </td>
                                     </tr>
                                 </tbody>
