--- a/Softuni/4. Applications/3. Asynchronous Programming/FISHER-GAME/index.html
+++ b/Softuni/4. Applications/3. Asynchronous Programming/FISHER-GAME/index.html
@@ -55,7 +55,8 @@
             <button class="add">Add</button>
         </fieldset>
     </aside>
-    <script src="./app.js"></script>
+    <!-- <script src="./app.js"></script> -->
+    <script src="./app-AsyncAwait.js"></script>
 </body>
 
 </html>
