--- a/Softuni/4. Applications/3. Asynchronous Programming/FORECASTER/index.html
+++ b/Softuni/4. Applications/3. Asynchronous Programming/FORECASTER/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <div id="content">
+        <h1 class="notification"></h1>
         <p>New York, London, Barcelona</p>
         <div id="request">
             <input id="location" class='bl' type="text" value="New York">
@@ -24,7 +25,8 @@
         </div>
     </div>
     <!-- <script src="./app.js"></script> -->
-    <script src="./app-Async-Await.js"></script>
+    <script src="./app2.js"></script>
+    <!-- <script src="./app-Async-Await.js"></script> -->
 </body>
 
 </html>
