--- a/Softuni/4. Applications/4. Remote Databases/STUDENTS/index.html
+++ b/Softuni/4. Applications/4. Remote Databases/STUDENTS/index.html
@@ -18,7 +18,9 @@
                 <th>Grade</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+            
+        </tbody>
     </table>
     <script src="./app.js"></script>
 </body>
