--- a/Softuni/4. Applications/6. Routing/Team-Manager-Skeleton/index.html
+++ b/Softuni/4. Applications/6. Routing/Team-Manager-Skeleton/index.html
@@ -1,26 +1,50 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-    <link rel="stylesheet" type="text/css" href="css/team.css">
-    <link rel="stylesheet" type="text/css" href="css/details.css">
-    <link rel="stylesheet" type="text/css" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <title>Team Managers App</title>
-  </head>
-  <body>
-    <div id="infoBox" class="notification" disabled></div>
-    <div id="errorBox" class="notification" disabled></div>
-    <div id="main">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" type="text/css" href="css/index.css" />
+        <link rel="stylesheet" type="text/css" href="css/team.css" />
+        <link rel="stylesheet" type="text/css" href="css/details.css" />
+        <link
+            rel="stylesheet"
+            type="text/css"
+            href="./node_modules/bootstrap/dist/css/bootstrap.min.css"
+        />
+        <title>Team Managers App</title>
+    </head>
+    <body>
+        <div id="infoBox" class="notification" disabled></div>
+        <div id="errorBox" class="notification" disabled></div>
+        <div id="main"></div>
 
-    </div>
+        <!-- The core Firebase JS SDK is always required and must be listed first -->
+        <script src="https://www.gstatic.com/firebasejs/8.3.3/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.3/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/8.3.3/firebase-firestore.js"></script>
 
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./node_modules/handlebars/dist/handlebars.min.js"></script>
-    <script src="./node_modules/sammy/lib/sammy.js"></script>
-    <script src="./node_modules/sammy/lib/plugins/sammy.handlebars.js"></script>
-    <script type="module" src="./scripts/app.js"></script>
-  </body>
+        <!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+        <script>
+            // Your web app's Firebase configuration
+            var firebaseConfig = {
+                apiKey: "AIzaSyD_6VpJVLkoFm0yuIyZ_BvwbimMEB4Tr5Y",
+                authDomain: "team-manager---routing.firebaseapp.com",
+                projectId: "team-manager---routing",
+                storageBucket: "team-manager---routing.appspot.com",
+                messagingSenderId: "927511927778",
+                appId: "1:927511927778:web:0399ccc19bf9b444cef7bb",
+            };
+            // Initialize Firebase
+            firebase.initializeApp(firebaseConfig);
+        </script>
+
+        <script src="./node_modules/jquery/dist/jquery.min.js"></script>
+        <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="./node_modules/handlebars/dist/handlebars.min.js"></script>
+        <script src="./node_modules/sammy/lib/sammy.js"></script>
+        <script src="./node_modules/sammy/lib/plugins/sammy.handlebars.js"></script>
+        <script type="module" src="./scripts/app.js"></script>
+    </body>
 </html>
